re PR c++/14476 (ICE after error about enum not being defined when using it as a bit field)

PR c++/14476
	* decl.c (xref_tag): Do not create dummy ENUMERAL_TYPEs.

	PR c++/14476
	* g++.dg/lookup/enum1.C: New test.

From-SVN: r79310